# angry-birds-group-4

./: .gitignore  CMakeLists.txt  CMakelists.txt  Meeting-notes.md  README.md  TODO.md  build_and_run.sh  korpelainen_was_here.md
data/levels/: f13d16b5f.lvl  f17d7a786.lvl  f23c10cdc.lvl  f2e02bd76.lvl  f43166041.lvl  f4c1faf81.lvl  f5301fee7.lvl  f5c5595c7.lvl  f621db7a6.lvl  f9a4ce0c0.lvl  ffa9400aa.lvl
data/levels/endless/: f955cf47a.lvl  faa2f185c.lvl  faea837cd.lvl  fe4927233.lvl  ff98d5306.lvl
include/: Application.hpp  Resources.hpp  UpdateListener.hpp  deprecated.hpp  framework.hpp  gameplay.hpp  screens.hpp  ui.hpp
include/framework/: AudioSystem.hpp  FileManager.hpp  RandomGen.hpp  RenderSystem.hpp  ResourceManager.hpp  Resources.hpp
include/gameplay/: Beer.hpp  Block.hpp  Camera.hpp  Cannon.hpp  Catapult.hpp  Editor.hpp  Effect.hpp  Fuksi.hpp  Game.hpp  GameObject.hpp  GameObjectTypes.hpp  Ground.hpp  Level.hpp  ParticleEffect.hpp  Person.hpp  PhysObject.hpp  Physics.hpp  Pickup.hpp  Teekkari.hpp  Terrain.hpp  TestLevel.hpp  Tnt.hpp
include/screens/: DemoScreen.hpp  GameScreen.hpp  MainMenu.hpp  Screen.hpp
include/ui/: Button.hpp  ColoredElement.hpp  DivElement.hpp  Element.hpp  InputElement.hpp  Label.hpp  ListElement.hpp  MessageBox.hpp  MultilineText.hpp  RoundColoredElement.hpp  RoundElement.hpp  RoundIcon.hpp  TextElement.hpp  TextLine.hpp  UIConstants.hpp
libs/box2d/include/box2d/: b2_settings.h
plan/: angry_teekkari_uml.html
src/: Application.cpp  main.cpp
src/framework/: AudioSystem.cpp  FileManager.cpp  RenderSystem.cpp  ResourceManager.cpp
src/gameplay/: Block.cpp  Cannon.cpp  Catapult.cpp  Editor.cpp  Game.cpp  GameObject.cpp  GameObjectTypes.cpp  Person.cpp  PhysObject.cpp
src/screens/: GameScreen.cpp  MainMenu.cpp  Screen.cpp
src/ui/: Button.cpp  DivElement.cpp  Element.cpp  InputElement.cpp  Label.cpp  ListElement.cpp  MessageBox.cpp  MultilineText.cpp  RoundColoredElement.cpp  RoundElement.cpp  RoundIcon.cpp  TextElement.cpp  TextElemtn.cpp  TextLine.cpp  UIConstants.cpp
